WIP - air ops UI

--- a/CarrierConstruct.Blazor/Pages/Index.razor
+++ b/CarrierConstruct.Blazor/Pages/Index.razor
@@ -1,7 +1,8 @@
 ﻿@page "/"
+@using CarrierConstruct.Blazor.Components
 
 <PageTitle>Carrier Construct</PageTitle>
 
-<MudText Typo="Typo.body1">Welcome to Carrier Construct!</MudText>
+<AirOpsComponent />
 
 
