--- a/CarrierConstruct.Blazor/Pages/Index.razor
+++ b/CarrierConstruct.Blazor/Pages/Index.razor
@@ -1,8 +1,7 @@
-﻿@page "/"
+﻿@*@page "/"*@
 @using CarrierConstruct.Blazor.Components
 
 <PageTitle>Carrier Construct</PageTitle>
 
-<AirOpsComponent />
 
 
