--- a/CarrierConstruct.Blazor/Components/HangarComponent.razor
+++ b/CarrierConstruct.Blazor/Components/HangarComponent.razor
@@ -1,1 +1,13 @@
-﻿
+﻿<MudPaper Width="300px">
+    <MudText Typo="Typo.h6">Hangar</MudText>
+
+    @foreach (var aircraft in AircraftInHangar)
+    {
+        <div>
+            <MudText Typo="Typo.body1">@aircraft.Name</MudText>
+            @*<MudButton @onclick="(() => SendAircraftToFlightDeck(aircraft))">Send to Flight Deck</MudButton>*@
+            <MudButton @onclick="(args) => OrderAircraftToFlightDeck(args, aircraft)">Send to Flight Deck</MudButton>
+        </div>
+    }
+
+</MudPaper>
