--- a/CarrierConstruct.Blazor/Components/HangarComponent.razor
+++ b/CarrierConstruct.Blazor/Components/HangarComponent.razor
@@ -1,20 +1,35 @@
-﻿<MudPaper Width="300px">
+﻿@using CarrierConstruct.Blazor.Enums
+@using CarrierConstruct.Blazor.Interfaces
+<MudPaper Width="300px">
     <MudText Typo="Typo.h6">Hangar</MudText>
 
     @foreach (var aircraft in AircraftInHangar)
     {
-        <div class="pa-4">
+        <div class="pa-4" @onclick="(args) => SelectAircraft(args, aircraft)">
             <div class="d-flex">
-                <MudText Typo="Typo.body2">@aircraft.Designation</MudText>
-                <MudText Typo="Typo.body2">@aircraft.Name</MudText>
+                @if (selectedAircraft.Contains(aircraft))
+                {
+                    <MudPaper Class="mud-theme-primary">
+                        <MudIcon Icon="@Icons.Material.Filled.ArrowCircleUp" Title="Favorite" />
+                    </MudPaper>
+                }
+                <MudText Typo="Typo.body2">@aircraft.FullName</MudText>
             </div>
-            <MudButton Variant="Variant.Filled"
-                       Color="Color.Primary"
-                       FullWidth="true"
-                       @onclick="(args) => OrderAircraftToFlightDeck(args, aircraft)">
-                Send to Flight Deck
-            </MudButton>
         </div>
     }
+    
+    <MudButton Variant="Variant.Filled"
+               Color="Color.Primary"
+               FullWidth="true"
+               @onclick="OrderSelectedAircraftToFlightDeck">
+        Order Selected Aircraft to Flight Deck
+    </MudButton>
+    
+    <div>
+        @foreach (IAircraft a in selectedAircraft)
+        {
+            <p>@a.Name</p>
+        }
+    </div>
     
 </MudPaper>
