WIP - Order handling by multiple elevators

--- a/CarrierConstruct.Blazor/Components/FlightDeckComponent.razor
+++ b/CarrierConstruct.Blazor/Components/FlightDeckComponent.razor
@@ -5,8 +5,9 @@
         {
             <div class="pa-4">
                 <div class="d-flex">
-                    <MudText Typo="Typo.body2">@aircraft.Designation</MudText>
                     <MudText Typo="Typo.body2">@aircraft.Name</MudText>
+                    <MudText Typo="Typo.body2">@aircraft.Modex</MudText>
+                   
                 </div>
             </div>
             @*<MudButton Variant="Variant.Filled"
