Improvements to aircraft card UI

--- a/CarrierConstruct.Blazor/Components/HangarComponent.razor
+++ b/CarrierConstruct.Blazor/Components/HangarComponent.razor
@@ -5,7 +5,7 @@
 
 <MudText Typo="Typo.h6">Hangar</MudText>
     
-<MudPaper Class="d-flex flex-wrap" MaxWidth="1200px">
+<MudPaper Class="d-flex flex-wrap pa-4" MaxWidth="1200px">
     @foreach (var aircraft in AircraftInHangar)
     {
         <AircraftCardComponent Aircraft="aircraft" 
