--- a/CarrierConstruct.Blazor/Components/UI/AircraftCardComponent.razor
+++ b/CarrierConstruct.Blazor/Components/UI/AircraftCardComponent.razor
@@ -1,36 +1,36 @@
 ﻿@using CarrierConstruct.Blazor.Interfaces
 
-<MudButton OnClick="HandleClick" Disabled="ClickDisabled">
-    <MudPaper Class="d-flex flex-wrap" Elevation="6">
+<MudButton OnClick="HandleClick" Disabled="ClickDisabled" Class="pa-0 ma-0 rounded-lg">
+    <MudPaper Class="ma-2 rounded-lg" Elevation="6" Width="300px">
         
-        @*TODO: Is this the right way to handle selection?*@
-        @*TODO: Fix un-checking*@
         @if (IsSelected)
         {
-            <MudPaper Class="mud-theme-primary rounded-l-xl">
-                <MudIcon Icon="@Icons.Material.Filled.CheckCircle" Title="Favorite" />
-            </MudPaper>
+            <div class="d-flex flex-auto justify-space-between mud-theme-success px-4 py-2 rounded-t-lg">
+                <div class="d-flex">
+                    <MudIcon Icon="@Icons.Material.Filled.CheckCircle" Title="Favorite" Class="mr-2"/>
+                    <MudText Typo="Typo.body2">@Aircraft.Designation @Aircraft.Name</MudText>
+                </div>
+                <MudText Typo="Typo.body2">@Aircraft.Role</MudText>
+            </div>
         }
         else
         {
-            <MudPaper Class="mud-theme-secondary rounded-l-xl">
-                <MudIcon Icon="@Icons.Material.Filled.Circle" Title="Favorite" />
-            </MudPaper>
-        }
-        
-        <div class="d-block">
-            <div class="d-flex justify-space-between mud-theme-primary px-4 py-2">
-                <MudText Typo="Typo.body2">@Aircraft.Designation @Aircraft.Name</MudText>
+            <div class="d-flex flex-auto justify-space-between mud-theme-primary px-4 py-2 rounded-t-lg">
+                <div class="d-flex align-content-center">
+                    <MudIcon Icon="@Icons.Material.Filled.Circle" Title="Favorite" Class="mr-2"/>
+                    <MudText Typo="Typo.body2">@Aircraft.Designation @Aircraft.Name</MudText>
+                </div>
                 <MudText Typo="Typo.body2">@Aircraft.Role</MudText>
             </div>
+        }
 
-            <div class="pa-4">
-                <MudText Typo="Typo.body1">[ SQUADRON ] @Aircraft.Modex</MudText>
-                <MudText Typo="Typo.body1">Serial: @Aircraft.Serial</MudText>
-            </div>
-
-            @*<MudText Typo="Typo.caption">Status: @Aircraft.Status</MudText>*@
+        <div class="pa-4">
+            <MudText Typo="Typo.body1">[ SQUADRON ] @Aircraft.Modex</MudText>
+            <MudText Typo="Typo.body1">Serial: @Aircraft.Serial</MudText>
         </div>
+        
+        @*TODO: Implement aircraft status*@
+        @*<MudText Typo="Typo.caption">Status: @Aircraft.Status</MudText>*@
 
     </MudPaper>
 </MudButton>
@@ -48,11 +48,8 @@
     [Parameter]
     public EventCallback<MouseEventArgs> OnAircraftCardClicked { get; set; }
 
-    //private bool isSelected;
-
     public void HandleClick()
     {
-        //isSelected = !isSelected;
         OnAircraftCardClicked.InvokeAsync();
     }
 }
