--- a/CarrierConstruct.Blazor/Shared/MainLayout.razor
+++ b/CarrierConstruct.Blazor/Shared/MainLayout.razor
@@ -9,6 +9,7 @@
         <MudText Typo="Typo.h6">Carrier Construct</MudText>
         <MudSpacer/>
         <!-- Dark Mode Toggle -->
+        <MudSwitch @bind-Checked="@_isDarkMode" Color="Color.Secondary" Class="ma-4" T="bool" Label="Toggle Light/Dark Mode"/>
     </MudAppBar>
     <MudMainContent>
         <MudContainer MaxWidth="MaxWidth.Large" Class="ma-8">
@@ -18,5 +19,6 @@
 </MudLayout>
 
 @code {
-
+    private MudTheme _theme = new();
+    private bool _isDarkMode;
 }
