--- a/CarrierConstruct.Blazor/Components/HangarComponent.razor
+++ b/CarrierConstruct.Blazor/Components/HangarComponent.razor
@@ -3,9 +3,9 @@
 @using CarrierConstruct.Blazor.Interfaces
 @using System.Linq
 
-<MudText Typo="Typo.h6">Hangar</MudText>
+<h3>Hangar</h3>
     
-<MudPaper Class="d-flex flex-wrap pa-4" MaxWidth="1200px">
+<div>
     @foreach (var aircraft in AircraftInHangar)
     {
         <AircraftCardComponent Aircraft="aircraft" 
@@ -13,15 +13,11 @@
                                ClickDisabled="orderInProgress"
                                IsSelected="selectedAircraft.Contains(aircraft)"/>
     }
-</MudPaper>
+</div>
     
-<MudButton Variant="Variant.Filled"
-           Color="Color.Primary"
-           FullWidth="true"
-           OnClick="OrderSelectedAircraftToFlightDeck"
-           Disabled="orderInProgress || selectedAircraft.Count == 0">
+<button @onclick="OrderSelectedAircraftToFlightDeck">
     Order to Flight Deck
-</MudButton>
+</button>
     
 <div>
     <p>Selected Aircraft:</p>
