--- a/CarrierConstruct.Blazor/Components/UI/AircraftCardComponent.razor
+++ b/CarrierConstruct.Blazor/Components/UI/AircraftCardComponent.razor
@@ -1,6 +1,6 @@
 ﻿@using CarrierConstruct.Blazor.Interfaces
 
-<button @onclick="HandleClick">
+<button @onclick="HandleClick" class="cc-aircraft-card">
         
         @if (IsSelected)
         {
