--- a/CarrierConstruct.Blazor/Pages/_Layout.cshtml
+++ b/CarrierConstruct.Blazor/Pages/_Layout.cshtml
@@ -9,6 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <base href="~/" />
     <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered" />
+    <link rel="stylesheet" href="~/css/app.min.css" />
 </head>
 <body>
     @RenderBody()
