--- a/CarrierConstruct.Blazor/Components/UI/AircraftCardComponent.razor
+++ b/CarrierConstruct.Blazor/Components/UI/AircraftCardComponent.razor
@@ -4,7 +4,7 @@
         
         @if (IsSelected)
         {
-            <div>
+            <div class="cc-lr-box cc-header-selected">
                 @*<MudIcon Icon="@Icons.Material.Filled.CheckCircle" Title="Favorite" Class="mr-2"/>*@
                 <p>@Aircraft.Designation @Aircraft.Name</p>
                 <p>@Aircraft.Role</p>
@@ -12,7 +12,7 @@
         }
         else
         {
-            <div>
+            <div class="cc-lr-box cc-header-deselected">
                 @*<MudIcon Icon="@Icons.Material.Filled.Circle" Title="Favorite" Class="mr-2"/>*@
                 <p>@Aircraft.Designation @Aircraft.Name</p>
                 <p>@Aircraft.Role</p>
