--- a/CarrierConstruct.Blazor/wwwroot/css/app.css
+++ b/CarrierConstruct.Blazor/wwwroot/css/app.css
@@ -26,15 +26,24 @@ html, page {
   background-color: #1B2737;
   color: #AAC5BA;
   border: 2px solid #AAC5BA;
-  padding: 18px;
+  /*padding: 18px;*/
+  padding: 0px;
   font-family: "Inconsolata", serif;
   width: 250px;
+  margin: 8px;
 }
 .cc-aircraft-card:hover {
   font-weight: bold;
   color: #FAFF70;
-  border: 4px solid #FAFF70;
-  padding: 16px;
+  border: 2px solid #FAFF70;
+  /*border: 6px solid #FAFF70;*/
+}
+.cc-aircraft-card .cc-header-deselected {
+  /*background-color: gray;*/
+}
+.cc-aircraft-card .cc-header-selected {
+  background-color: #CCFF33;
+  color: #1B2737;
 }
 
 .cc-elevator-container {
@@ -51,6 +60,27 @@ html, page {
   border: 2px solid #AAC5BA;
 }
 
+.cc-button {
+  background-color: #1B2737;
+  color: #AAC5BA;
+  padding: 12px 24px;
+  margin: 8px;
+  border: 2px solid #AAC5BA;
+  text-transform: uppercase;
+  letter-spacing: 4px;
+}
+.cc-button:hover {
+  color: #FAFF70;
+  border: 2px solid #FAFF70;
+  /*background-color: #FAFF70;
+  color: #1B2737;*/
+}
+
+.cc-divider {
+  border: none;
+  border-top: 2px dashed #AAC5BA;
+}
+
 .cc-h1 {
   font-family: "Major Mono Display", serif;
   font-size: 36px;
@@ -60,6 +90,12 @@ html, page {
 .cc-h2 {
   font-family: "Major Mono Display", serif;
   font-size: 24px;
+}
+
+.cc-lr-box {
+  display: flex;
+  justify-content: space-between;
+  padding: 0 12px;
 }
 
 /*warn FAFF70
