--- a/CarrierConstruct.Blazor/Pages/_Layout.cshtml
+++ b/CarrierConstruct.Blazor/Pages/_Layout.cshtml
@@ -10,6 +10,7 @@
     <base href="~/" />
     <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered" />
     <link rel="stylesheet" href="~/css/app.min.css" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 <body>
     @RenderBody()
