--- a/CarrierConstruct.Blazor/wwwroot/css/app.css
+++ b/CarrierConstruct.Blazor/wwwroot/css/app.css
@@ -22,6 +22,21 @@ html, page {
   font-family: "Inconsolata", serif;
 }
 
+.cc-page-container {
+  display: flex;
+  flex-direction: column;
+  max-width: 2000px;
+  /*justify-content: center;*/
+  align-items: center;
+}
+
+.cc-aircraft-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  max-width: 1500px;
+}
+
 .cc-aircraft-card {
   background-color: #1B2737;
   color: #AAC5BA;
@@ -78,6 +93,8 @@ html, page {
 
 .cc-divider {
   border: none;
+  min-width: 500px;
+  max-width: 2000px;
   border-top: 2px dashed #AAC5BA;
 }
 
@@ -90,6 +107,11 @@ html, page {
 .cc-h2 {
   font-family: "Major Mono Display", serif;
   font-size: 24px;
+}
+
+.cc-text-small {
+  font-size: 12px;
+  color: #5B8674;
 }
 
 .cc-lr-box {
